# BipedChallenge

./: .gitignore  Dockerfile  LICENSE  README.md  README_original.md  checksum.txt  docker-run-release.sh
controller_example/: CMakeLists.txt  README.md
controller_example/cmake/: FindSDL2_ttf.cmake
controller_example/lcmtypes/: TODO  lcmt_discrete_particle_u.hpp  lcmt_discrete_particle_u.java  lcmt_discrete_particle_u.lcm  lcmt_discrete_particle_u.py  lcmt_discrete_particle_x.hpp  lcmt_discrete_particle_x.java  lcmt_discrete_particle_x.lcm  lcmt_discrete_particle_x.py
controller_example/models/biped_v2/: CMakeLists.txt  package.xml
controller_example/models/biped_v2/config/: joint_names_biped_v2.yaml
controller_example/models/biped_v2/launch/: display.launch  gazebo.launch
controller_example/models/biped_v2/urdf/: biped_v2.csv  biped_v2.urdf  biped_v2_contact.urdf  biped_v2_no_arm.urdf  biped_v2_no_arm_w_spring.urdf  stair.urdf
controller_example/src/biped/: CMakeLists.txt  README.md  biped_sim.cc  biped_sim_server.cc  biped_sim_server_nonblocking.cc  jump_sim.cc  jump_sim_server.cc  stair_sim.cc  stair_sim_server.cc  stand_server.cc
controller_example/src/biped/controller/: CMakeLists.txt  README.md  feedback_controller.cc  feedback_controller.h  feedback_controller_async.cc  feedback_controller_async.h  pivot_model_controller.cc  pivot_model_controller.h  tau_controller.cc  tau_controller.h  whole_body_controller.cc  whole_body_controller.h
controller_example/src/biped/estimator/: CMakeLists.txt  ankle_estimator.cc  ankle_estimator.h  dummy_estimator.cc  dummy_estimator.h  jump_estimator.cc  jump_estimator.h  mit_estimator.cc  mit_estimator.h
controller_example/src/biped/hardware/: CMakeLists.txt  xsens_mti.cc  xsens_mti.h
controller_example/src/biped/hardware/xspublic/: CMakeLists.txt
controller_example/src/biped/hardware/xspublic/xscommon/: CMakeLists.txt  abstractadditionallogger.h  additionalloggerbase.cpp  additionalloggerbase.h  calltracer.h  common_qdebug.h  consolelogger.cpp  consolelogger.h  enumexpandersbase.cpp  enumexpandersbase.h  extendedenum.h  fwupdate.c  fwupdate.h  journalexception.cpp  journalexception.h  journalfile.cpp  journalfile.h  journaller.cpp  journaller.h  journalloglevel.h  journalstackwalker.h  journalthreader.cpp  journalthreader.h  stackdumper.cpp  stackdumper.h  stackwalker.cpp  stackwalker.h  stackwalker_linux.cpp  stackwalker_linux.h  threading.cpp  threading.h  xbus.c  xbus.h  xbusparser.c  xbusparser.h  xprintf.cpp  xprintf.h  xscommon_config.h  xsens_debugtools.h  xsens_generic_matrix.h  (+6 more)
controller_example/src/biped/hardware/xspublic/xscontroller/: CMakeLists.txt  broadcastdevice.cpp  broadcastdevice.h  callbackmanagerxda.cpp  callbackmanagerxda.h  clocksynccommand.h  communicator.cpp  communicator.h  communicatorfactory.cpp  communicatorfactory.h  compat.h  datalogger.cpp  datalogger.h  datapacketcache.cpp  datapacketcache.h  dataparser.cpp  dataparser.h  datapoller.cpp  datapoller.h  devicecommunicator.cpp  devicecommunicator.h  devicefactory.cpp  devicefactory.h  deviceredetector.cpp  deviceredetector.h  devicetypes.h  dotdevice.cpp  dotdevice.h  dummy.cpp  enumerateusbdevices.cpp  enumerateusbdevices.h  enumexpanders.cpp  enumexpanders.h  fileloader.h  gpsstatus.h  idfetchhelpers.h  iointerface.cpp  iointerface.h  iointerfacefile.cpp  iointerfacefile.h  (+131 more)
controller_example/src/biped/hardware/xspublic/xstypes/: CMakeLists.txt  datapacket_p.cpp  datapacket_p.h  pstdint.h  resource.h  xsanalogindata.h  xsarray.c  xsarray.h  xsbaud.c  xsbaud.h  xsbaudcode.h  xsbaudrate.h  xsbusid.h  xsbytearray.c  xsbytearray.h  xscalibrateddata.c  xscalibrateddata.h  xscanbaudcode.h  xscanconfigidentifier.h  xscandataidentifier.h  xscanframeformat.h  xscanoutputconfiguration.c  xscanoutputconfiguration.h  xscanoutputconfigurationarray.c  xscanoutputconfigurationarray.h  xscontrolline.h  xscopy.h  xsdataidentifier.h  xsdataidentifiervalue.h  xsdatapacket.cpp  xsdatapacket.h  xsdatapacketptr.h  xsdatapacketptrarray.c  xsdatapacketptrarray.h  xsdebugcounters.cpp  xsdebugcounters.h  xsdevicecapabilities.c  xsdevicecapabilities.h  xsdeviceid.c  xsdeviceid.h  (+121 more)
controller_example/src/biped/others/: CMakeLists.txt  command_interpreter.cc  command_interpreter.h  hello.cc  imu.cc  imu.h  joystick_demo.cc  joystick_demo.py  joystick_receiver.cc  joystick_receiver.h  joystick_receiver_sim.cc  mbp_introspec.cc  quaternion_sensor.cc  quaternion_sensor.h  xbox_controller_demo.py
controller_example/src/biped/planner/: CMakeLists.txt  alip_planner.cc  alip_planner.h  jump_planner.cc  jump_planner.h  stair_planner.cc  stair_planner.h  swing_arm_planner.cc  swing_arm_planner.h  utils.h
controller_example/src/biped/tcp/: CMakeLists.txt
controller_example/src/biped/tcp/include/: data_converter.hpp  isaac_sim_system.hpp  json.hpp  socket_base.hpp  tcp_server.hpp
controller_example/src/biped/tcp/src/: data_converter.cpp  isaac_sim_system.cpp  launch_server.cpp  socket_base.cpp  tcp_server.cpp
docs/: Supplementary_Document_for_Competition_Rules.md
docs/dev-branch-copy/leju_kuavo_tongverse-lite/: .flake8  README.md
docs/dev-branch-copy/leju_kuavo_tongverse-lite/app/: biped_ctrl_client.py  main.py  test.py
docs/omni.isaac.jetbot/: jetbot_move.py
docs/omni.isaac.jetbot/stable_baselines_example/: train.py
examples/: launch_task.sh  task_launcher.py
examples/task_1_solver/: task_solver.py
examples/task_3_solver/: task3_cmd.json  task_solver.py
examples/task_4_solver/: task_solver.py
examples/task_5_solver/: task_solver.py
examples/task_6_solver/: task6_cmd.npz  task_solver.py
submission/: launch_task.sh  task_launcher.py
submission/task_1_solver/: task_solver.py
submission/task_2_solver/: task_solver.py
submission/task_3_solver/: task_solver.py
submission/task_4_solver/: task_solver.py
submission/task_5_solver/: task_solver.py
submission/task_6_solver/: task_solver.py
tests/: test_npz.py  test_sb3.py
train/: env.py  launch_train_task.sh  train_task_launcher.py
(+54 files in other folders)
